add basic html codes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/theme/dracula.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.css"
+    />
     <title>Simple Pyton Compiler</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Python Compiler</h1>
+      <div class="editor-wrapper">
+        <textarea id="code"></textarea>
+      </div>
+      <button class="run-btn">Run</button>
+      <div class="output-container">
+        <pre id="output"> >Output show here...</pre>
+      </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/6.65.7/mode/python/python.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
